authorization on tasks endpoints implemented; switching from beego swagger to swag.
