# routers/router.go
@@ -1,10 +1,13 @@
-// @APIVersion 1.0.0
+// @version 1.0.0
 // @Title Scheduler Test API
 // @Description API fot scheduler application
-// @Contact pavelkiwiandrosov.00@gmail.com
+// @Contact pavelkiwiandrosov@gmail.com
 // @TermsOfServiceUrl http://beego.me/
 // @License Apache 2.0
 // @LicenseUrl http://www.apache.org/licenses/LICENSE-2.0.html
+// @host      localhost:8080
+// @BasePath  /api/v1
+// @schemes http https
 
 package routers
 
